<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Repository importer</string>
    <string name="title_attachAboutScript">Attach \'About Script\'</string>
    <string name="title_subscriptions">Subscriptions…</string>
    <string name="summary_subscriptions">Manage your subscriptions</string>
    <string name="title_links">Links</string>
    <string name="title_playStore">Play store page</string>
    <string name="link_playStoreImporter">
        https://play.google.com/store/apps/details?id=com.trianguloy.llscript.repository
    </string>
    <string name="title_googlePlus">Google+ Community</string>
    <string name="link_googlePlus">https://plus.google.com/communities/109017480579703391739
    </string>
    <string name="title_about">About</string>
    <string name="summary_about">TrianguloY and Lukas Morawietz</string>
    <string name="title_author">Authors</string>
    <string name="title_browser">Default external Browser</string>
    <string name="summary_browser">Used for all external pages</string>
    <string name="title_showTools">Show Tools in header</string>
    <string name="summary_showTools">Some of them might not work, search can\'t be used in-app.
        Might require App restart to apply.
    </string>
    <string name="title_newScripts">Notify for new Scripts</string>
    <string name="title_changedSubs">Notify for changed Subscriptions</string>
    <string name="title_editor">Editor</string>
    <string name="title_resetPw">Reset saved password</string>
    <string name="toast_resetPw">Password cleared</string>
    <string name="title_general">General</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_pushNotifications">Push Notifications</string>
    <string name="title_interval">Update Interval</string>
    <string name="title_theme">Use dark theme</string>
    <string name="title_preferDedicated">Prefer dedicated Apps</string>
    <string name="summary_preferDedicated">Use e.g. Google Plus App instead of the browser</string>
    <string name="title_lookAndFeel"><![CDATA[Look & Feel]]></string>
    <string name="title_behaviour">Behaviour</string>
    <string name="title_directReturn">Directly return to external apps</string>
    <string name="summary_directReturn">If unchecked the Index will be shown when navigating back
    </string>
    <string name="title_longPressClose">Long press to close</string>
    <string name="summary_longPressClose">Close the app by Long pressing back everywhere</string>
    <string name="title_singleClose">Close on single back press</string>
    <string name="summary_singleClose">If unchecked you\'ll need to double click back to close the
        app
    </string>
    <string name="title_enableAcra">Enable Acra</string>
    <string name="title_reportMode">Report Mode</string>
    <string name="title_directEdit">Directly edit pages</string>
    <string name="summary_directEdit">Open the editor for the current page</string>
    <string name="summary_acraEmail">The email address which is sent with reports for developers to respond</string>
    <string name="title_acraEmail">Email</string>
    <string name="title_themeChanged">Theme Changed</string>
    <string name="message_themeChanged">To apply the Changes the app has to be restarted. Do you
        want to restart now?
    </string>
    <string name="pref_aboutScript">aboutScript</string>
    <string name="pref_Scripts">scripts</string>
    <string name="pref_subscriptions">subscriptions2</string>
    <string name="pref_pageNames">page_name_map</string>
    <string name="pref_notifications">notify</string>
    <string name="pref_notificationInterval">interval</string>
    <string name="pref_browser">browser</string>
    <string name="pref_showTools">showTools</string>
    <string name="pref_resetPw">reset_pw</string>
    <string name="pref_template">template</string>
    <string name="pref_newScripts">newScripts</string>
    <string name="pref_preferDedicated">preferDedicated</string>
    <string name="pref_directReturn">directReturn</string>
    <string name="pref_longPressClose">longPressClose</string>
    <string name="pref_singleClose">singleClose</string>
    <string name="pref_directEdit">directEdit</string>
    <string name="pref_timestamp">timestamp</string>
    <string name="pref_changedSubs">changedSubs</string>
    <string name="pref_enableAcra">acra.enable</string>
    <string name="pref_acraEmail">acra.user.email</string>
    <string name="pref_theme">theme</string>
    <string name="pref_version">version</string>
    <string name="pref_reportMode">reportMode</string>
    <string name="pref_repoHash">repoHash</string>
    <string name="pref_subs">subscriptions</string>
    <string-array name="entries_interval">
        <item>Every Minute</item>
        <item>Hourly</item>
        <item>Every 12 hours</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="values_interval">
        <item>60000</item>
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item>
        <item>604800000</item>
    </string-array>
    <string name="default_interval">86400000</string>
    <string-array name="entries_notify">
        <item>None</item>
        <item>Toast</item>
        <item>Dialog</item>
    </string-array>
    <string-array name="values_notify">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="default_newItem">1</string>
    <string name="default_changedSub">2</string>
    <string-array name="entries_reportMode">
        <item>Ask</item>
        <item>Never send</item>
        <item>Send always</item>
    </string-array>
    <string-array name="values_reportMode">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="default_reportMode">0</string>
    <string name="title_crash">Repository Importer has crashed</string>
    <string name="text_crash">Please send the log to the developers.</string>
    <string name="text_commentPrompt">Please describe the Situation in which this crash occurred:</string>
    <string name="text_emailPrompt">Enter your email address here if you want to help solving this bug:</string>
    <string name="checkbox_rememberChoice">Remember this choice</string>
    <string name="button_send">Send</string>
    <string name="button_dont_send">Don\'t Send</string>
    <string name="toast_crashNoReport">Repository Importer crashed\n(No report sent)</string>
    <string name="toast_crashReported">Repository Importer crashed\n(Report sent)</string>
    <string name="menu_mainPage">Repository Index</string>
    <string name="menu_openInBrowser">Open in browser</string>
    <string name="menu_settings">Settings…</string>
    <string name="menu_subscribe">Subscribe</string>
    <string name="menu_unsubscribe">Unsubscribe</string>
    <string name="menu_editor">Editor</string>
    <string name="menu_share">Share</string>
    <string name="menu_crash">Click to crash</string>
    <string name="button_importToLauncher">Search and import…</string>
    <string name="title_importer">Script Importer</string>
    <string name="text_scriptName">Name:</string>
    <string name="text_menuFlag">Lightning menu</string>
    <string name="text_itemFlag">Item menu</string>
    <string name="text_customFlag">Custom menu</string>
    <string name="text_scriptCode">Source Code:</string>
    <string name="text_codeHint">Code should be here. Please contact the developer</string>
    <string name="button_import">Import</string>
    <string name="button_share">share</string>
    <string name="title_noPageFound">No page found</string>
    <string name="message_noPageFound">The page couldn\'t be loaded. Make sure you have an active
        connection or try again in some minutes
    </string>
    <string name="button_retry">Retry</string>
    <string name="title_severalScriptsFound">Found more than one Script on this page, please choose
        one
    </string>
    <string name="message_noScriptFound">No script found. If you know that there is one, contact the
        developer
    </string>
    <string name="message_outdatedLauncher">The version of the launcher is not supported.\nPlease
        update the launcher to the latest version.
    </string>
    <string name="message_launcherNotFound">Lightning Launcher was not found.
    </string>
    <string name="messageSuffix_launcherProblem">Do you want to go to Play Store?\n(You can continue using the app, but some features won\'t be available)</string>
    <string name="message_cantConnect">Can\'t connect to server</string>
    <string name="text_nameNotFound">Name not found</string>
    <string name="id_scriptRepository">script_repository</string>
    <string name="id_scriptTemplate">script_template</string>
    <string name="key_backStack">backStack</string>
    <string name="key_repoHtml">repoHtml</string>
    <string name="key_state">state</string>
    <string name="key_pageText">pageText</string>
    <string name="key_pageName">pageName</string>
    <string name="key_pageId">pageId</string>
    <string name="key_textHash">textHash</string>
    <string name="key_isTemplate">isTemplate</string>
    <string name="title_subscribe">Subscribe</string>
    <string name="message_subscribeAsk">Do you want to subscribe to this page?</string>
    <string name="title_updatedSubs">Updated subscribed page(s)</string>
    <string name="title_remove">Remove</string>
    <string name="message_remove">Remove subscription to page </string>
    <string name="toast_oneNewScript">There is a new Script in the Repository:</string>
    <string name="toast_severalNewScripts">There are new Scripts in the Repository:</string>
    <string name="toast_subscribeSuccessful">Successfully subscribed</string>
    <string name="toast_unsubscribeSuccessful">Successfully unsubscribed</string>
    <string name="text_noSubs">No Subscriptions</string>
    <string name="menu_logout">Logout</string>
    <string name="button_createPage">Create a new Page</string>
    <string name="button_editPage">Edit an existing Page</string>
    <string name="button_save">Save</string>
    <string name="button_create">Create</string>
    <string name="hint_id">unique_id</string>
    <string name="text_none">None</string>
    <string name="prefix_script">script_</string>
    <string name="prefix_temp">temp_</string>
    <string name="text_bold">Bold Text</string>
    <string name="text_italic">Italic Text</string>
    <string name="text_underline">Underlined Text</string>
    <string name="text_code">Code</string>
    <string name="text_unorderedList">Unordered List Item</string>
    <string name="text_orderedList">Ordered List Item</string>
    <string name="title_selectPage">Select page to edit</string>
    <string name="text_addTo">Add to Repository Category:</string>
    <string name="hint_nameOrDescription">Name / Short Description</string>
    <string name="button_preview">Preview</string>
    <string name="text_LoggedInAs">Logged in as:</string>
    <string name="text_questionmark">\?</string>
    <string name="title_repository">Repository</string>
    <string name="button_template">Create / Edit Template</string>
    <string name="radio_empty">Start Empty</string>
    <string name="radio_default">Start with default template</string>
    <string name="radio_custom">Start with custom template</string>
    <string name="title_template">Template</string>
    <string name="message_alreadyExists">Page already exists. Please choose another ID</string>
    <string name="message_cantSaveEmpty">You can\'t save an empty page</string>
    <string name="text_rememberPw">Remember Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register ↗</string>
    <string name="text_login">Login with your Wiki account:</string>
</resources>