<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" tools:context=".editor.EditorActivity"
                android:paddingLeft="@dimen/editor_margin"
                android:paddingRight="@dimen/editor_margin"
                android:paddingTop="@dimen/editor_margin"
                android:paddingBottom="@dimen/editor_margin">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_createPage"
        android:id="@+id/buttonCreatePage" android:onClick="button"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/Theme.BorderlessButton"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_editPage"
        android:id="@+id/buttonEditPage" android:onClick="button"
        android:layout_below="@+id/imageView2" android:layout_centerHorizontal="true"
        style="@style/Theme.BorderlessButton"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textUser" android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:visibility="gone"
        android:layout_centerInParent="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_repository"
        android:id="@+id/textView4" android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        style="@style/Theme.TitleText"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView4" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" style="@style/Theme.Divider"
        tools:ignore="ContentDescription"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_below="@+id/buttonCreatePage" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/Theme.SmallDivider" tools:ignore="ContentDescription"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_template"
        android:id="@+id/textView5" android:layout_below="@+id/buttonEditPage"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        style="@style/Theme.TitleText"/>
    <ImageView style="@style/Theme.Divider" android:layout_width="match_parent"
               android:layout_height="wrap_content" android:id="@+id/imageView3"
               android:layout_below="@+id/textView5" android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true" tools:ignore="ContentDescription"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_template"
        android:id="@+id/buttonTemplate" android:layout_below="@+id/imageView3"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
        style="@style/Theme.BorderlessButton" android:onClick="button"/>
</RelativeLayout>